--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-color: #ffffff;
+  background-color: #FAF4F4;
 }
 
 @layer utilities {
